--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -134,11 +134,8 @@ A solução API Cielo eCommerce da plataforma Cielo eCommerce foi desenvolvida c
 
 <p>Não é possível manter duas integrações simultâneas do webservice 1.5 e da API Cielo eCommerce
 Ao realizar o cadastro de uma das integrações junto ao Cielo Ecommerce será necessário escolher entre uma das plataformas
-Para maiores informações acesse: https://www.cielo.com.br/desenvolvedores</p>
-
-<blockquote>
-  <p>A migração para a API Cielo Ecommerce é <strong>obrigatoria</strong>. O WebService 1.5 foi descontinuado e não possui suporte ou novos desenvolvimentos.</p>
-</blockquote>
+Para maiores informações acesse: https://www.cielo.com.br/desenvolvedores
+A migração para a API Cielo Ecommerce é <strong>obrigatoria</strong>. O WebService 1.5 foi descontinuado e não possui suporte ou novos desenvolvimentos.</p>
 
 <h2 id="5-não-possuo-a-integração-15-posso-utilizar-a-api-cielo-ecommerce">5. Não possuo a integração 1.5, posso utilizar a API Cielo eCommerce?</h2>
 
@@ -356,7 +353,7 @@ Veja como realizar essa consulta em nosso manual de integração: https://develo
   <li>iOS</li>
   <li>Android</li>
   <li>Java</li>
-  <li>.net</li>
+  <li>net</li>
   <li>PHP</li>
   <li>Python</li>
 </ul>
