--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -442,9 +442,9 @@
 <p>Basta instalar os três arquivos a seguir na Trustedstore do servidor. A Cielo não oferece suporte para a instalação do Certificado. Caso não esteja seguro sobre como realizar a instalação do Certificado EV, então você deverá ser contatado o suporte do fornecedor do seu servidor.</p>
 
 <ul>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Root.crt">Certificado Raiz</a></li>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate2.cer">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate2.cer">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <h2 id="passo-a-passo-para-a-instalação">Passo a Passo para a Instalação</h2>
@@ -464,9 +464,9 @@
 <p>Salvar os três arquivos abaixo em uma pasta nova, ou que relembre facilmente, pois será utilizada posteriormente:</p>
 
 <ul>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Root.crt">Certificado Raiz</a></li>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate2.cer">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
+  <li><a href="https://developercielo.github.io/attachment/Intermediate2.cer">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <p><strong>2o Passo:</strong></p>
