[5d35fb9ab1aba55fc7ebd32289db7cc12a1f5d05]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -375,7 +375,7 @@
     <tr>
       <td>Discover</td>
       <td>Sim</td>
-      <td><em>Não</em></td>
+      <td>Não</td>
       <td><em>Não</em></td>
       <td><em>Não</em></td>
       <td>Sim</td>
