[2ccf4a9b943476b1aab665bb29619cfc40f722cb]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -442,9 +442,9 @@
 <p>Basta instalar os três arquivos a seguir na Trustedstore do servidor. A Cielo não oferece suporte para a instalação do Certificado. Caso não esteja seguro sobre como realizar a instalação do Certificado EV, então você deverá ser contatado o suporte do fornecedor do seu servidor.</p>
 
 <ul>
-  <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
-  <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
-  <li><a href="https://developercielo.github.io/attachment/Intermediate2.cer">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/Root.crt">Certificado Raiz</a></li>
+  <li><a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
+  <li><a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/intermediate2.cer">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <h2 id="passo-a-passo-para-a-instalação">Passo a Passo para a Instalação</h2>
