--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -141,7 +141,7 @@
 
 <p>Enquanto a LIO V1 possui um design mais compacto e permite uma maior mobilidade, a LIO V2 foi concebida em um tamanho maior e possui algumas funcionalidades exclusivas e adicionais como por exemplo:</p>
 
-<p><strong>Impressora térmica</strong>: o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, 0.as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.</p>
+<p><strong>Impressora térmica</strong>: o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.</p>
 
 <p>Especificação da Bobina:
 Papel Azul 48 gramas, Comprimento: 12 metros, Diâmetro máximo: 30 milímetros, Largura: 57 milímetros.</p>
