[335302a486eb22a4f032ef0ca444ca0b0a418163]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -457,7 +457,7 @@ Dessa forma, garante-se o funcionamento da aplicação no hardware da LIO V1 com
   <p><strong>Atenção</strong>: A Cielo não permite que o aplicativo do cliente/parceiro seja desenvolvido utilizando o recurso WebView. Esse recurso visual deixa a plataforma da Cielo LIO vulnerável. Caso a aplicação esteja utilizando o WebView, esta não atenderá aos parâmetros de certificação e não será disponibilizada na Cielo Store.</p>
 </blockquote>
 
-<h2 id="seguestões-de-substitutos">Seguestões de substitutos</h2>
+<h2 id="sugestões-de-substitutos">Sugestões de substitutos</h2>
 
 <h3 id="push-notifications">Push-Notifications</h3>
 
