[961ddd46e22fdb1960de66b2019929972e744844]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -15745,6 +15745,13 @@ Eles indicam, por exemplo, se uma transação com <code class="highlighter-rouge
       <td>A partir do dia seguinte, apenas 4 vezes em 16 dias.</td>
     </tr>
     <tr>
+      <td>475</td>
+      <td>Timeout de Cancelamento</td>
+      <td>A aplicação não respondeu dentro do tempo esperado.</td>
+      <td>Realizar uma nova tentativa após alguns segundos. Persistindo, entrar em contato com o Suporte.</td>
+      <td>Não</td>
+    </tr>
+    <tr>
       <td>999</td>
       <td>Sistema/comunicação indisponível.</td>
       <td>Transação não autorizada. Sistema do emissor sem comunicação. Tente mais tarde.  Pode ser erro no SITEF, favor verificar !</td>
