[600103c5b3a83189c9cebc2821f032054accc384]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -587,7 +587,7 @@
 
 <h2 id="cartão-de-crédito---sandbox">Cartão de crédito - Sandbox</h2>
 
-<p>No sandbox, é necessario utilizar o <code class="highlighter-rouge">Provider</code> seja utilizado como <strong>SIMULADO</strong></p>
+<p>No sandbox, é necessario utilizar o <code class="highlighter-rouge">Provider</code> seja utilizado como <code class="highlighter-rouge">SIMULADO</code></p>
 
 <p>O Simulado é uma configuração que emula a utilização de pagamentos com Cartão de Crédito. 
 Com esse meio de pagamento é possível simular os fluxos de:</p>
