--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -163,7 +163,7 @@
 
 <h2 id="características-da-solução">Características da solução</h2>
 
-<p>A solução API Cielo eCommerce da plataforma Cielo eCommerce foi desenvolvida com a tecnologia REST, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como:</p>
+<p>A solução <strong>API Cielo eCommerce</strong> da plataforma Cielo eCommerce foi desenvolvida com a tecnologia REST, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como:</p>
 
 <ul>
   <li>ASP</li>
