--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3856,6 +3856,36 @@ O método recebe como parâmetro o <code class="highlighter-rouge">bitmap</code>
 
 <p><a href="https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios">Saiba Mais</a></p>
 
+<h3 id="promover-aplicativo-para-desenvolvimento">Promover Aplicativo para Desenvolvimento</h3>
+
+<p>O desenvolvedor deve realizar o upload do aplicativo no Dev Console e não mais receber automaticamente na Lio.</p>
+
+<p>A partir desse momento, na lista de versões da tela de detalhe do aplicativo, terá uma opção “visualizar” na tabela. 
+Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo Test Your App, que estará na Lio de dev, e ler esse QR Code.</p>
+
+<p>Para realizar os testes de aplicativos em desenvolvimento, o desenvolvedor deve seguir os seguintes passos:</p>
+
+<ol>
+  <li>
+    <p>Efetuar o upload do apk no Dev Console.</p>
+  </li>
+  <li>
+    <p>Deve clicar em “instalar” na versão desejada, dentro da tela de detalhes do aplicativo, para gerar o QR Code.</p>
+  </li>
+</ol>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/instalarapp.png" alt="Devconsole" /></p>
+
+<ol>
+  <li>Abrir o aplicativo “Test Your App” em sua LIO de desenvolvimento e apontar para o QR Code gerado no Dev Console.</li>
+</ol>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/qrcode.png" alt="QR Code" /></p>
+
+<ol>
+  <li>A versão do app será baixada na Lio.</li>
+</ol>
+
 <h3 id="certificação-de-aplicativos">Certificação de Aplicativos</h3>
 
 <p>O objetivo da certificação de aplicativos é garantir que todos os aplicativos presentes na plataforma Cielo LIO, sejam próprios ou públicos, estejam de acordo com as regras e critérios estabelecidos pela Cielo.</p>
