[7b2108fc0f6cc5b76c9a252d3c8880756ee68453]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2518,8 +2518,8 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
     </tr>
     <tr>
       <td>pan</td>
-      <td>Número cartão tokenizado (6 primeiros dígitos – 4 últimos dígitos)</td>
-      <td>476173-0036</td>
+      <td>Número cartão tokenizado (6 primeiros dígitos – 4 últimos dígitos ou 4 últimos)</td>
+      <td>476173-0036 ou **********4242</td>
     </tr>
     <tr>
       <td>originalTransactionId</td>
