--- a/_i18n/pt/_posts/env3ds/exemplo.html
+++ b/_i18n/pt/_posts/env3ds/exemplo.html
@@ -9,7 +9,7 @@
         <input type="hidden" class="bpmpi_cardnumber" value="4000000000000002" />
         <input type="hidden" class="bpmpi_cardexpirationmonth" value="12" />
         <input type="hidden" class="bpmpi_cardexpirationyear" value="2019" />
-        <input type="hidden" class="bpmpi_cardtype" value="debit" /> <!-- ver domínio no manual -->
+        <input type="hidden" class="bpmpi_paymentmethod" value="debit" /> <!-- ver domínio no manual -->
         <input type="hidden" class="bpmpi_cardalias" value="cartaodoguilherme" />
         <input type="hidden" class="bpmpi_default_card" value="true" />
         <input type="hidden" class="bpmpi_giftcard_amount" value="1000" /> <!-- em centavos -->
@@ -134,5 +134,6 @@
             };
         }
     </script>
+    <!-- js hospedado no servidor da loja -->
     <script src="https://www.loja.com.br/BP.Mpi.3ds20.min.js" type="text/javascript" />
 </html>
