[2a6e90d410b4841f417f2b2fe8e5b57ef0fdf897]: Update 2018-09-10-env3ds.md
. bpmpi_cardtype renamed to bpmpi_paymentmethod
. alterada url bit.ly para https://bit.ly/2CSOp2n (https://mpisandbox.braspag.com.br/Scripts/BP.Mpi.3ds20.min.js)

--- a/manual/env3ds.html
+++ b/manual/env3ds.html
@@ -377,9 +377,9 @@
 
 <p><strong>IMPORTANTE!</strong></p>
 
-<p>O arquivo JavaScript deve ser salvo no servidor onde está a aplicação da loja. Para baixar o arquivo, acesse:</p>
+<p>O arquivo JavaScript deve ser salvo no servidor onde está a aplicação da loja. Para baixar o arquivo no Sandbox, acesse:</p>
 
-<p><a href="https://bit.ly/2wWXK2T">https://bit.ly/2wWXK2T</a></p>
+<p><a href="https://bit.ly/2CSOp2n">https://bit.ly/2CSOp2n</a></p>
 
 <p>Descrição das saídas</p>
 
@@ -487,7 +487,7 @@
       <td>Sim</td>
     </tr>
     <tr>
-      <td>bpmpi_cardtype</td>
+      <td>bpmpi_paymentmethod</td>
       <td>Tipo do cartão a ser autenticado. No caso do cartão múltiplo, deverá especificar um dos tipos, Credit ou Debit</td>
       <td>Credit – Cartão de Crédito<br />Debit – Cartão de Débito</td>
       <td>Sim</td>
