[bd78f89b750ebea172bdaf62d3d5d7403e3a4c03]: Merge pull request #56 from DeveloperCielo/tsaitobraspag-patch-1
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14547,7 +14547,11 @@ Abaixo vamos explica-los na ordem em que podem ocorrer:</p>
   <tbody>
     <tr>
       <td>200</td>
-      <td>OK</td>
+      <td>OK (Capture/Void/Get)</td>
+    </tr>
+    <tr>
+      <td>201</td>
+      <td>OK (Authorization)</td>
     </tr>
     <tr>
       <td>400</td>
