[63b352357b1576c57c3169a69eba1a3257315f8d]: Merge pull request #57 from DeveloperCielo/tsaitobraspag-patch-2
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -11865,7 +11865,11 @@ More information and complete integration, you can find in the link: https://dev
   <tbody>
     <tr>
       <td>200</td>
-      <td>OK</td>
+      <td>OK (Capture/Void/Get)</td>
+    </tr>
+    <tr>
+      <td>201</td>
+      <td>OK (Authorization)</td>
     </tr>
     <tr>
       <td>400</td>
